# llada2.1

./: .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  pyproject.toml
experiments/: dynamic_threshold_config.json  dynamic_threshold_config.local.example.json  dynamic_threshold_generation.py  gsm8k_local_baseline.py  gsm8k_mask_reconstruct.py  gsm8k_prompt_mask_sweep.py  gsm8k_threshold_sweep.py  prompt_mask_generation.py  smoke_test.py  trace_llada_generation.py
prompts/: smoke.jsonl
scripts/: analyze_dllm_critical_tokens.py  apply_sglang_patches.sh  compare_gsm8k_details.py  render_sglang_dllm_trace.py  render_token_events_block.py  save_sglang_patch.sh  server_pull_run.sh  sync.ps1  write_gsm8k_error_report.py  write_gsm8k_threshold_reason_report.py
sglang_patches/: README.md  deterministic_dllm_compat.patch  dllm_trace.patch  joint_threshold_t2t_fallback.patch  rocm_disable_vllm_rmsnorm.patch  t2t_advantage_threshold.patch  zz_confidence_remask.patch
sglang_server/: README.md  check_sglang.sh  dllm_algorithm_config.local.example.yaml  dllm_algorithm_config.yaml  generation_config.json  generation_config.local.example.json  launch_sglang.py  server_config.json  server_config.local.example.json  server_env.example  start_sglang.sh
src/llada_experiments/: __init__.py  config.py  sglang_client.py
