[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llada-experiments"
version = "0.1.0"
description = "LLaDA 2.1 experiments through an SGLang OpenAI-compatible server."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=2.19",
    "httpx>=0.27",
    "PyYAML>=6.0",
    "python-dotenv>=1.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
